<b> Version 1.2.8: </b> <br />
<b> Bug Fixes: </b> <br />
- Fixing Doubles <br />
- Adding hoopa, hoopau, diancie icons <br />

<b> Version 1.2.7: </b> <br />
<b> Bug Fixes: </b> <br />
- Fixing Return <br />

<b> Version 1.2.6: </b> <br />
<b> Bug Fixes: </b> <br />
- Fixing megaevo <br />

<b> Version 1.2.5: </b> <br />
<b> Bug Fixes: </b> <br />
- Fixing game breaking bug <br />

<b> Version 1.2.4 : </b> <br />
<b> Bug Fixes: </b> <br />
- Multiple battle bugs <br />
- VGC icons <br />
<b> New Features: </b> <br />
- You can turn off the bug captured toast in the settings <br />


<b> Version 1.2.3 : </b> <br />
<b> Bug Fixes: </b> <br />
- Teambuilder now changes ivs/hapinness on special moves cases <br />
<b> New Features: </b> <br />
- Automatic bug catching in battle! Press the bug button to send the bugs to us via email ! <br />

<b> Version 1.2.2 : </b> <br />
<b> Bug Fixes: </b> <br />
- Teambuilder crash fixed <br />
<b> New Features: </b> <br />
- You can advertise for us now! <br />

<b> Version 1.2.1 : </b> <br />
<b> Bug Fixes: </b> <br />
- Teambuilder learnset fixes (evolutions) <br />
- Pokemons now sorted by tiers (if a tier is selected) <br />

<b> Version 1.2.0 : </b> <br />
<b> Bug Fixes: </b> <br />
- Teambuilder learnset fixes <br />
<b> New Features: </b> <br />
- Challenges! <br />