@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 21
-        versionName '1.2.8'
+        versionCode 22
+        versionName '1.2.9'
     }
     buildTypes {
         release {
