@@ -33,6 +33,16 @@
         <div class="card half">
             <h2>Changelog and History</h2>
             <p>
+                <b> Version 1.2.9: </b>
+                <br />
+                <br />
+                <b> Bug Fixes: </b>
+                <br />
+                <ul>
+                    <li>Fixing Icons</li>
+                    <li>Fixing CAP in teambuilder</li>
+                    <li>Updating tiers</li>
+                </ul>
                 <b> Version 1.2.8: </b>
                 <br />
                 <br />
