@@ -1,3 +1,9 @@
+<b> Version 1.2.9: </b> <br />
+<b> Bug Fixes: </b> <br />
+- Fixing Icons <br />
+- Fixing CAP in teambuilder <br />
+- Updating tiers <br />
+
 <b> Version 1.2.8: </b> <br />
 <b> Bug Fixes: </b> <br />
 - Fixing Doubles <br />
